2022-08-25  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha07: Oceanside Paopao';git push
	git tag -a 5.1.1-alpha07 -m 'all: ncz2psx works as intended';git push --tags

	* MFOs like ncea correctly write Zarr output but not POSIX output given Zarr input

	* MFOs like ncea correctly write Zarr output and POSIX output given POSIX input

	* ncz2psx properly transforms local NCZarr-store directory names to NCZarr file:// URLs

2022-08-24  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha06: Cheney';git push
	git tag -a 5.1.1-alpha06 -m 'all: in_zarr4, nco_fl_blocksize() fix;ncclimo region_name, cell_methods';git push --tags

	* Add install rules for ncz2psx to Makefile.am, CMakeLists.txt, bld/Makefile

	* Add build rules for NCZarr files to data/Makefile.am, build in_zarr4 and symlinks

2022-08-23  Charlie Zender  <zender@uci.edu>

	* Add scalar dimension to in_zarr4.cdl to workaround NCZarr scalar bug

2022-08-21  Charlie Zender  <zender@uci.edu>

	* nco_fl_blocksize() determine extended filetype via output file name not input file ID

2022-08-19  Charlie Zender  <zender@uci.edu>

	* Add in_zarr.cdl and in_zarr4.cdl to generate more complex NCZarr test files

2022-08-17  Charlie Zender  <zender@uci.edu>

	* ncclimo add cell_methods="area: mean" attribute

	* ncclimo add coordinates="region_name" attribute

	* NCO 5.1.1-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha05: Round Ray';git push
	git tag -a 5.1.1-alpha05 -m 'ncclimo rgn_avg';git push --tags

	* ncclimo: Fold-in --glb_avg into --rgn_avg regional average timeseries capabilities

2022-08-11  Charlie Zender  <zender@uci.edu>

	* ncclimo/ncremap: Add Cori build environment modules to NCO_OVERRIDE_PATH (required for Intel)

	* NCO 5.1.1-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha04: Curtis';git push